// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logic initializes the state when constructed 1`] = `<div />`;

exports[`ui renders a test page with a no logged in user but an email present the same as no logged in user 1`] = `
<div
  className="App"
>
  <div
    className="navMenu"
  >
    <div
      className="navLinks"
    >
      <a
        href="#page=home"
      >
        Home
      </a>
      <a
        href="#page=data-entry"
      >
        Data Entry
      </a>
    </div>
    <div
      className="loginStatus"
    >
      <a
        href="#page=login"
      >
        Login
      </a>
    </div>
  </div>
  <div>
     Test Page 
  </div>
</div>
`;

exports[`ui renders a test page with a user logged in 1`] = `
<div
  className="App"
>
  <div
    className="navMenu"
  >
    <div
      className="navLinks"
    >
      <a
        href="#page=home"
      >
        Home
      </a>
      <a
        href="#page=data-entry"
      >
        Data Entry
      </a>
    </div>
    <div
      className="loginStatus"
    >
      <div>
        <span
          className="whoami"
        >
          Logged in as 
          snape@hogwarts.edu
        </span>
        <a
          href="javascript:;"
          onClick={[MockFunction]}
        >
          Logout
        </a>
      </div>
    </div>
  </div>
  <div>
     Test Page 
  </div>
</div>
`;

exports[`ui renders a test page with a user not logged in 1`] = `
<div
  className="App"
>
  <div
    className="navMenu"
  >
    <div
      className="navLinks"
    >
      <a
        href="#page=home"
      >
        Home
      </a>
      <a
        href="#page=data-entry"
      >
        Data Entry
      </a>
    </div>
    <div
      className="loginStatus"
    >
      <a
        href="#page=login"
      >
        Login
      </a>
    </div>
  </div>
  <div>
     Test Page 
  </div>
</div>
`;
